[package]
name = "benzo"
version = "0.1.6"
edition = "2021"
authors = ["derxwather"]
description = "Hardcore Modular Utils - быстрое создание проектов"
repository = "https://github.com/derxwather/benzo"
license = "MIT"
copyright = "2025 derxwather"

[dependencies]
dialoguer = "0.11.0"
console = "0.15.7"